moving the logic into become-a-restaurant.js amd fixing a visual bug adding a .visible in forms.css

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -51,9 +51,12 @@ dialog div{
     color: #757575; /*todo: ponerlo como variable general para poder hacer el modo oscuro too*/
 }
 .tags-container {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     gap: 8px;
     margin-top: 10px;
     min-height: 30px;
+}
+.tags-container.visible {
+    display: flex;
 }
